--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,9 +1,28 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 100vh;
-    background-color: #121212;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100vw;
+  height: 100vh;
+  background-color: #121212;
+  scroll-snap-type: y mandatory;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
+.content {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 1140px) {
+  .main {
+    align-items: center;
+  }
+
+  .content {
+    padding-left: unset;
+    transform: translateX(0);
+  }
+}
