--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,8 +85,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  background-color: #111111;
 }
 
 body::-webkit-scrollbar {
