--- a/src/components/home/about/about.module.css
+++ b/src/components/home/about/about.module.css
@@ -1,106 +1,130 @@
 .container {
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  scroll-snap-align: start;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
 }
 
-.titleContainer {
+.containerMain {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #0a0a0a;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  padding: 0 25vw 0 15vw;
 }
 
-.title {
-  font-family: "Karantina-Regular";
+.titleMain {
+  font-family: "BebasNeue-Regular", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 80px;
-  letter-spacing: 0.24em;
-  color: #fff;
-  text-indent: 0.24em;
-}
-
-.title span {
+  font-size: 2rem;
   color: #ff0f49;
 }
 
-.subtitle {
-  font-family: "Montserrat-Regular";
+.textMain {
+  font-family: "BebasNeue-Regular", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 21px;
-  color: #ffffff;
-  margin: 0;
+  font-size: 4rem;
+  color: white;
+  margin: 3rem 0;
 }
 
-.subtitle span {
-  color: #ff0f49;
-  text-transform: uppercase;
-}
-
-.button {
-  width: 220px;
-  height: 60px;
-  background: linear-gradient(90deg, #ff0f49 -8.94%, #ff0f49 138.3%);
-  border-radius: 50px;
-  margin: 40px 0 0 0;
+.buttonMain {
+  width: 430px;
+  height: 80px;
+  background: #ff0f49;
+  border-radius: 20px;
   display: flex;
-  align-items: center;
   justify-content: center;
-  font-family: "Montserrat-Regular";
+  align-items: center;
+  border: none;
+  color: white;
+  font-family: "BebasNeue-Regular", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
-  letter-spacing: 0.15em;
-  color: #ffffff;
+  font-size: 2rem;
   cursor: pointer;
-  transition: all 0.2s linear;
-  text-decoration: none;
 }
 
-.button:hover {
-  background: linear-gradient(90deg, #ff0f49 -8.94%, #ff91ab 138.3%);
-  color: #ffffff;
-  box-shadow: 0px 0px 103px -10px #ff0f49;
+.containerCursor {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0 25vw 0 15vw;
+  transition: all 0.1s linear;
+  clip-path: circle(20px at center center);
 }
 
-@media screen and (max-width: 1140px) {
-  .container {
-    padding: 0;
-    width: 100vw;
-    height: calc(100vh - 100px);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.titleCursor {
+  font-family: "BebasNeue-Regular", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2rem;
+  color: black;
+}
+
+.textCursor {
+  font-family: "BebasNeue-Regular", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 4rem;
+  color: #ff0f49;
+  margin: 3rem 0;
+}
+
+.buttonCursor {
+  width: 431px;
+  height: 82px;
+  background: white;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ff0f49;
+  color: #ff0f49;
+  font-family: "BebasNeue-Regular", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1224px) {
+  .containerMain {
+    padding: 10px;
   }
 
-  .titleContainer {
-    flex: none;
-    align-items: center;
+  .textMain {
+    font-size: 2rem;
   }
 
-  .title {
-    margin: 0;
+  .textCursor {
+    font-size: 2rem;
+  }
+
+  .buttonMain {
+    width: 300px;
+    height: 60px;
+    font-size: 1.5rem;
+  }
+
+  .buttonMain:hover {
+    color: #ff0f49;
+    background-color: white;
   }
 }
 
-@media screen and (max-width: 690px) {
-  .button {
-    width: 200px;
-    height: 50px;
-    font-size: 14px;
-  }
-
-  .title {
-    font-size: 60px;
-    text-align: center;
-  }
-
-  .subtitle {
-    font-size: 16px;
+@media screen and (max-width: 840px) {
+  .buttonMain {
+    width: calc(100vw - 20px);
   }
 }
