--- a/src/components/home/cover/cover.module.css
+++ b/src/components/home/cover/cover.module.css
@@ -1,108 +1,97 @@
 .container {
-  position: relative;
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  padding: 0 0 0 250px;
-  scroll-snap-align: start;
-}
-
-.titleContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  z-index: 1;
-  height: 500px;
-  overflow: hidden;
-}
-
-.title {
-  font-family: "Karantina-Regular";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 80px;
-  letter-spacing: 0.24em;
-  color: #fff;
-  text-transform: uppercase;
-  opacity: 0;
-  transform: translateY(200px);
-  transition: all 0.5s ease-in-out;
-}
-
-.title span {
-  color: #ff0f49;
-}
-
-.subtitle {
-  font-family: "Montserrat-Regular";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 21px;
-  color: #ffffff;
-  margin: 0;
-  opacity: 0;
-  transform: translateY(100vh);
-  transition: all 0.5s ease-in-out;
-}
-
-.separatorContainer {
-  opacity: 0;
-  transform: translateY(100vh);
-  transition: all 0.5s ease-in-out;
-}
-
-.coverImageContainer {
-  position: absolute;
-  left: 0;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background-size: cover;
+  background-blend-mode: screen;
+}
+
+.firstLayer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 0;
+  background-size: cover;
+  background-blend-mode: screen;
+}
+
+.cursorLayer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 4;
+  background-size: cover;
+  background-blend-mode: screen;
+  transition: all 0.1s linear;
+  clip-path: circle(200px at left top);
 }
 
 .overlayer {
+  width: 100%;
+  height: 100%;
   position: absolute;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(18, 18, 18, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2;
+  background-size: cover;
+  background-blend-mode: screen;
 }
 
-.coverImage {
-  width: 100vw;
+.backgroundContainer {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.backgroundImage {
   height: 100vh;
   object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media screen and (max-width: 1140px) {
+.titleContainer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.titleFirstLayer {
+  color: rgba(255, 15, 73, 1);
+  font-family: "BebasNeue-Regular", sans-serif;
+  font-size: 6.5rem;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+}
+
+.titleOverlayer {
+  color: white;
+  font-family: "BebasNeue-Regular", sans-serif;
+  font-size: 6.5rem;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+}
+
+@media screen and (max-width: 1224px) {
   .container {
-    padding: 0;
-    width: 100vw;
-    height: calc(100vh - 100px);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 10px;
   }
 
-  .titleContainer {
-    align-items: center;
-    padding: 0;
+  .titleFirstLayer {
+    font-size: 4rem;
   }
 
-  .title {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 690px) {
-  .title {
-    font-size: 60px;
-    text-align: center;
-    text-indent: 0.24em;
-  }
-
-  .subtitle {
-    font-size: 16px;
+  .titleOverlayer {
+    font-size: 4rem;
   }
 }
