--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,68 +1,75 @@
 /* Montserrat */
 
 @font-face {
-    font-family: 'Montserrat-Black';
-    src: url('../assets/fonts/Montserrat/Montserrat-Black.ttf');
+  font-family: "Montserrat-Black";
+  src: url("../assets/fonts/Montserrat/Montserrat-Black.ttf");
 }
 
 @font-face {
-    font-family: 'Montserrat-Bold';
-    src: url('../assets/fonts/Montserrat/Montserrat-Bold.ttf');
+  font-family: "Montserrat-Bold";
+  src: url("../assets/fonts/Montserrat/Montserrat-Bold.ttf");
 }
 
 @font-face {
-    font-family: 'Montserrat-ExtraBold';
-    src: url('../assets/fonts/Montserrat/Montserrat-ExtraBold.ttf');
+  font-family: "Montserrat-ExtraBold";
+  src: url("../assets/fonts/Montserrat/Montserrat-ExtraBold.ttf");
 }
 
 @font-face {
-    font-family: 'Montserrat-ExtraLight';
-    src: url('../assets/fonts/Montserrat/Montserrat-ExtraLight.ttf');
+  font-family: "Montserrat-ExtraLight";
+  src: url("../assets/fonts/Montserrat/Montserrat-ExtraLight.ttf");
 }
 
 @font-face {
-    font-family: 'Montserrat-Light';
-    src: url('../assets/fonts/Montserrat/Montserrat-Light.ttf');
+  font-family: "Montserrat-Light";
+  src: url("../assets/fonts/Montserrat/Montserrat-Light.ttf");
 }
 
 @font-face {
-    font-family: 'Montserrat-Medium';
-    src: url('../assets/fonts/Montserrat/Montserrat-Medium.ttf');
+  font-family: "Montserrat-Medium";
+  src: url("../assets/fonts/Montserrat/Montserrat-Medium.ttf");
 }
 
 @font-face {
-    font-family: 'Montserrat-Regular';
-    src: url('../assets/fonts/Montserrat/Montserrat-Regular.ttf');
+  font-family: "Montserrat-Regular";
+  src: url("../assets/fonts/Montserrat/Montserrat-Regular.ttf");
 }
 
 @font-face {
-    font-family: 'Montserrat-Black';
-    src: url('../assets/fonts/Montserrat/Montserrat-Black.ttf');
+  font-family: "Montserrat-Black";
+  src: url("../assets/fonts/Montserrat/Montserrat-Black.ttf");
 }
 
 @font-face {
-    font-family: 'Montserrat-SemiBold';
-    src: url('../assets/fonts/Montserrat/Montserrat-SemiBold.ttf');
+  font-family: "Montserrat-SemiBold";
+  src: url("../assets/fonts/Montserrat/Montserrat-SemiBold.ttf");
 }
 
 @font-face {
-    font-family: 'Montserrat-Thin';
-    src: url('../assets/fonts/Montserrat/Montserrat-Thin.ttf');
+  font-family: "Montserrat-Thin";
+  src: url("../assets/fonts/Montserrat/Montserrat-Thin.ttf");
 }
 
 /* Karantina */
 
 @font-face {
-    font-family: 'Karantina-Bold';
-    src: url('../assets/fonts/Karantina/Karantina-Bold.ttf');
+  font-family: "Karantina-Bold";
+  src: url("../assets/fonts/Karantina/Karantina-Bold.ttf");
 }
 
 @font-face {
-    font-family: 'Karantina-Light';
-    src: url('../assets/fonts/Karantina/Karantina-Light.ttf');
+  font-family: "Karantina-Light";
+  src: url("../assets/fonts/Karantina/Karantina-Light.ttf");
 }
 
 @font-face {
-    font-family: 'Karantina-Regular';
-    src: url('../assets/fonts/Karantina/Karantina-Regular.ttf');
+  font-family: "Karantina-Regular";
+  src: url("../assets/fonts/Karantina/Karantina-Regular.ttf");
+}
+
+/* Bebas Neue */
+
+@font-face {
+  font-family: "BebasNeue-Regular";
+  src: url("../assets/fonts/BebasNeue/BebasNeue-Regular.ttf");
 }
