--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   padding: 40px;
   display: flex;
@@ -9,6 +9,10 @@
   z-index: 999;
   background-color: transparent;
   pointer-events: none;
+}
+
+.headerContent {
+  display: flex;
 }
 
 .content {
@@ -21,6 +25,7 @@
   align-items: flex-start;
   justify-content: flex-end;
   flex: 1;
+  z-index: 999;
 }
 
 .right {
@@ -28,6 +33,7 @@
   justify-content: flex-end;
   align-items: flex-end;
   flex: 1;
+  z-index: 999;
 }
 
 .title {
@@ -36,6 +42,7 @@
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 400;
+  user-select: none;
 }
 
 .currentTitle {
@@ -57,6 +64,7 @@
   font-style: normal;
   font-weight: 400;
   pointer-events: all;
+  user-select: none;
 }
 
 .navigationList {
@@ -76,6 +84,8 @@
   background-color: transparent;
   cursor: pointer;
   pointer-events: all;
+  user-select: none;
+  text-align: center;
 }
 
 .navigationCurrentLink {
@@ -89,7 +99,9 @@
   cursor: pointer;
 }
 
-.navigationLink:hover {
+.title:hover,
+.navigationLink:hover,
+.link:hover {
   color: rgba(255, 15, 73, 1);
 }
 
